---
source: minijinja/tests/test_parser.rs
expression: "&ast"
input_file: minijinja/tests/parser-inputs/if_cond.txt

---
Ok(
    Template {
        children: [
            IfCond {
                expr: Var {
                    id: "expr1",
                } @ 1:6-1:11,
                true_body: [
                    EmitRaw {
                        raw: "\n    branch 1\n",
                    } @ 1:14-3:0,
                ],
                false_body: [
                    IfCond {
                        expr: Var {
                            id: "expr2",
                        } @ 3:8-3:13,
                        true_body: [
                            EmitRaw {
                                raw: "\n    branch 2\n",
                            } @ 3:16-5:0,
                        ],
                        false_body: [
                            IfCond {
                                expr: Var {
                                    id: "expr3",
                                } @ 5:8-5:13,
                                true_body: [
                                    EmitRaw {
                                        raw: "\n    branch 3\n",
                                    } @ 5:16-7:0,
                                ],
                                false_body: [
                                    EmitRaw {
                                        raw: "\n    else\n",
                                    } @ 7:10-9:0,
                                ],
                            } @ 5:3-9:11,
                        ],
                    } @ 3:3-9:11,
                ],
            } @ 1:3-9:11,
        ],
    } @ 1:0-9:11,
)
